--- a/sermons/Revelation1:1-3.tex
+++ b/sermons/Revelation1:1-3.tex
@@ -98,7 +98,47 @@ In this light, the goal of this sermon is to place a burden on the hearers
                 serve Him. They shall see His face, and His name shall be on
                 their foreheads.}
                     
-\subsubsection{He is King}
+\subsubsection{He is the conquering King}
+\I Rev 1:7 \Q{Behold, He is coming with clouds, and every eye will see Him, 
+                even they who pierced Him. And all the tribes of the earth
+                will mourn because of Him. Even so, Amen.}
+\I Rev 1:14-16 \Q{His head and hair were white like wool, as white as snow,
+                and His eyes like a flame of fire; His feet were like brass, 
+                as if refined in a furnace, and His voice as the sound of 
+                many waters; He had in his right hand seven stars, 
+                out of His mouth went a sharp two-edged sword, 
+                and His countenance was like the sun shining in its strength.}
+\I Rev 6:16-17 \Q{\ldots and said to the mountains and rocks, 
+                ``Fall on us and hide us from the face of Him who sits on the
+                throne and from the wrath of the Lamb! For the great day of His
+                wrath has come, and who is able to stand?''}
+\I Rev 14:14 \Q{Then I looked, and behold, a white cloud, and on the cloud
+                sat One like the Son of Man, having on His head a golden crown, 
+                and in His hand a sharp sickle.}
+\I Rev 17:14 \Q{``These [ten kings and the beast] will make war with the Lamb, 
+                and the Lamb will overcome them, for He is Lord of lords and
+                King of kings; and those who are with Him are called, 
+                chosen, and faithful.''}
+\I Rev 19:11-16 \Q{Now I saw heaven opened, and behold, a white horse.
+                And He who sat on Him was called Faithful and True,
+                and in righteousness He judges and makes war.
+                His eyes were like a flame of fire, and on His head were
+                many crowns. He had a name written that no one knew except
+                Himself. He was clothed with a robe dipped with blood,
+                and His name is called The Word of God.
+                And the armies of heaven, clothed in fine linen, white and
+                clean, followed Him on white horses.
+                Now out of His mouth goes a sharp sword, that with it He 
+                should strike the nations. And He Himself will rule them 
+                with a rod of iron. He Himself treads the winepress of the
+                fierceness and wrath of Almighty God. And He has on His robe 
+                and on His thigh a name written:
+                \Q{KING OF KINGS \\ AND LORD OF LORDS.}}
+
+\I Rev 20:15 \Q{And anyone not found written in the Book of Life was cast 
+                into the lake of fire.}
+            Note: we know this is the Lamb's Book of Life from Rev 13:8.
+
 \subsection{Who is it from?}
 \subsection{What is its purpose?}
 \subsection{Who is it to?}
