--- a/sermons/Revelation1:1-3.tex
+++ b/sermons/Revelation1:1-3.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 \newcommand{\BI}{\begin{itemize}}
 \newcommand{\EI}{\end{itemize}}
 \newcommand{\I}{\item}
@@ -22,10 +22,9 @@ In this light, the goal of this sermon is to place a burden on the hearers
     and to heed the commands given in it.
 
 \section*{Introduction}
-\section{The Nature of the Revelation of Jesus Christ}
-\subsection{Who does it reveal?}
+\section{The Subject of the Revelation of Jesus Christ}
 \I The book of Revelation reveals Jesus Christ.
-\subsubsection{He is God}
+\subsection{He is God}
 \I Rev 1:11 \Q{``I am the Alpha and the Omega, the First and the Last.''}
 \I Rev 1:17 \Q{``Do not be afraid, I am the First and the Last.''}
 \I Rev 22:13 \Q{``I am the Alpha and the Omega, the Beginning and the End, 
@@ -49,7 +48,7 @@ In this light, the goal of this sermon is to place a burden on the hearers
 \I Rev 1:16 \Q{\dots and His countenance was like the sun shining 
                 in its strength.}
 
-\subsubsection{He is the Savior}
+\subsection{He is the Savior}
 \I Rev 1:5 \Q{To Him who loved us and washed us from our sins 
                 in His own blood, \ldots}
 \I Rev 1:18 \Q{I am He who lives, and was dead, and behold, 
@@ -98,7 +97,7 @@ In this light, the goal of this sermon is to place a burden on the hearers
                 serve Him. They shall see His face, and His name shall be on
                 their foreheads.}
                     
-\subsubsection{He is the conquering King}
+\subsection{He is the conquering King}
 \I Rev 1:7 \Q{Behold, He is coming with clouds, and every eye will see Him, 
                 even they who pierced Him. And all the tribes of the earth
                 will mourn because of Him. Even so, Amen.}
@@ -139,11 +138,73 @@ In this light, the goal of this sermon is to place a burden on the hearers
                 into the lake of fire.}
             Note: we know this is the Lamb's Book of Life from Rev 13:8.
 
-\subsection{Who is it from?}
-\subsection{What is its purpose?}
-\subsection{Who is it to?}
-\subsection{What is its focus?}
+\section{The Purpose of the Revelation of Jesus Christ}
+\subsection{To show}
+\I Definition: to expose to the eyes; to explain, to reveal, and to inform.
+\I Matthew 16:21 \Q{From that time Jesus began to show to His disciples
+                    that He must go to Jerusalem, and suffer many things from
+                    the elders and chief priests and scribes, and be killed,
+                    and be raised on the third day.}
+\I John 20:20 \Q{When He had said this, He showed them His hands and His side.
+                Then the disciples were glad when they saw the Lord.}
+\I The purpose of Revelation is \emph{communication}, not \emph{confusion}.
+\subsubsection{Understanding is expected}
+\I Rev 2:7, 11, 17, 29; 3:6, 13, 22 -- the repeated exhortation to the churches
+    \Q{He who has an ear, let him hear what the Spirit says to the churches.}
+\I Rev 1:3, 22:7 -- we are expected to hear \emph{with understanding} in order
+    to obey
+    \Q{Blessed is he who reads and those who hear the words of this prophecy,
+    and keep those things which are written in it; for the time is near.}
+    \Q{Behold, I am coming quickly! Blessed is he who keeps the words 
+    of the prophecy of this book.}
+\subsubsection{Understanding has been enabled}
+\I Some will say that they are not able to understand. This is \emph{not}
+    a valid excuse.
+\I Has He not given you the Holy Spirit?
+\BI \I Was it not the washing of regeneration and renewing of the Holy Spirit
+        that saved you? (Titus 3:5)
+    \I Were you not born of water and the Spirit? (John 3:5)
+    \I Do you not live by the Spirit (thereby putting to death 
+        the deeds of the flesh)? (Romans 8:13)
+    \I How then can we say that we are unable to hear, and understand,
+        what the Spirit says to the churches? \EI
+\I Maybe if you were those who had hearts of stone,
+    but you have been given a heart of flesh (Ezekiel 36:26).
+\I Maybe if you were still futile in your thoughts (Romans 1:21), 
+    but you have been given the mind of Christ (1 Corinthians 2:16).
+\I In Jesus Christ you have been blessed with every spiritual blessing 
+    in the heavenly places in Jesus Christ (Eph 1:3), 
+\BI \I including knowing the mystery of His will (Eph 1:9), 
+    \I and the dispensation of the fullness of the times (Eph 1:10), \EI
+\I so that you can understand, and that you are without excuse.
 
+\subsubsection{Why understanding is not achieved}
+\I Why do we still have such trouble understanding?
+\I Yes, Revelation is, without a doubt, the most
+    controversial, misinterpreted, and misused book of the Bible.
+\I The problem is the hardness of our hearts, not the clarity of God's Word.
+\I Consider Jesus' disciples,
+\BI \I with the Lord 24/7 for 3 years,
+    \I Jesus personally taught them that He must be crucified and then 
+        rise again,
+    \I but the Jesus' death caught them by surprise,
+        and they initially didn't believe that He had risen!
+    \I How did Jesus characterize two of them, on the Emmaus road?
+        \Q{``O foolish ones, and slow of heart to believe in all that the 
+            prophets have spoken!''} (Luke 24:25)
+    \I And He basically preached the entire Old Testament to them,
+        in order that they might finally understand God's plan of redemption. 
+    \EI
+\I In the same way, we do not understand only because we are either
+\BI \I lovers of the world, 
+    \I ensnared by sin, 
+    \I foolish,
+    \I slow of heart to believe, or because 
+    \I we have not diligently searched and studied the Scriptures 
+        that we might understand God's full plan of redemption. \EI
+                
+\subsection{His servants}
+\subsection{Things which must shortly take place}
 \section{The Authority of the Revelation of Jesus Christ}
 \subsection{The word of God}
 \subsection{The testimony of Jesus Christ}
