--- a/scribblings/symmA.tex
+++ b/scribblings/symmA.tex
@@ -5,7 +5,7 @@
 \newcommand{\EE}{\end{equation}}
 \newcommand{\D}{\Delta}
 \title{Notes on symmetrizing the FDFD matrix with stretched-coordinate PML.}
-\author{Jesse Lu, Wonseok Shin}
+\author{Jesse Lu}
 \begin{document}
 \maketitle
 We want to find a diagonal matrix 
