--- a/sermons/Revelation1:1-3.tex
+++ b/sermons/Revelation1:1-3.tex
@@ -76,7 +76,7 @@ In this light, the goal of this sermon is to place a burden on the hearers
 \I Rev 3:7 \Q{``He who has the key of David, He who opens and no one shuts, 
                 and shuts and no one opens.''}
 \I Rev 1:18 \Q{``And I have the keys of Hades and of Death.''}
-\I Rev 19:7 \Q{``Let us be glad and rejoive and give Him glory,
+\I Rev 19:7 \Q{``Let us be glad and rejoice and give Him glory,
                 for the marriage of the Lamb has come,
                 and His wife has made herself ready.''}
 \I Rev 7:17 \Q{``for the Lamb who is in the midst of the throne 
@@ -204,7 +204,62 @@ In this light, the goal of this sermon is to place a burden on the hearers
         that we might understand God's full plan of redemption. \EI
                 
 \subsection{His servants}
+\I If you are a Christian, then you are the target audience of Revelation.
+    This highlights our need, as His servants, to know His Revelation.
+\BI \I Not for the world, but for His saints.
+    \I Not primarily for evangelism, but for the edification of the Church.
+    \I Not for repentance in the unbeliever, but in the life of the Christian.
+\EI
+\I This need is further deepened when we consider that 
+    ``servant'' is more accurately translated ``slave''.
+\BI \I We are the property of Jesus Christ,
+    \I owned by Him,
+    \I fully subject to His will.
+    \I Jesus has the full and complete rights to your life. \EI
+\I This means that knowing Revelation 
+\BI \I Is not a matter of leisure, or a hobby -- 
+        it is a matter of necessity and duty, as Christ's slave.
+    \I It is not about enriching yourself, 
+        or simply becoming more knowledgeable about the Bible -- 
+        it's about being faithful, and obedient.\EI
+\I Revelation is \emph{literally} Master Jesus' final instructions 
+    to His slaves before His return.
+\I And we cannot be the
+\BI \I faithful and wise servant (Matt 24:45) who is found faithfully
+        carrying out his Master's instructions, or
+    \I the servant (Matt 25) who has faithfully used the 2 or 5
+        talents entrusted to him by his Master \EI
+    apart from knowing and obeying the Revelation of Jesus Christ.
+
 \subsection{Things which must shortly take place}
+\I \emph{Transition:} We must make Revelation an urgent, \#1 priority,
+    because it informs us of the imminent.
+\I If imminent back then, how much more so now!
+\I Revelation has \emph{not} been fulfilled:
+\BI \I We are not in the new heaven and the new earth.
+    \I Death and Hades have not been thrown into the lake of fire.
+    \I Sin has not been abolished.
+    \I There still remains the final battle against Satan and the world.
+    \I The final judgement of sinners and the righteous.
+    \I Christ's evaluation of believers. \EI
+\I These things are future, but not far off, they are future imminent.
+\BI \I The Lord is not slow, He is merciful (2 Peter 3:19)
+    \I Nothing is hard for Him, 
+        but His judgement would have been far too much for you to bear! \EI
+\I The Second Coming is unheralded, it comes without warning.
+\BI \I Rev 22:7, 12 \Q{``Behold! I am coming quickly!''}
+    \I Rev 16:15 \Q{``Behold! I am coming as a thief''} \EI
+\I We must learn from the flood of Noah's time (Matt 24:38-39).
+    \Q{``For as in the days before the flood, they were eating and drinking,
+    marrying and giving in marriage, until the day that Noah entered
+    the ark, and did not know until the flood came and took them all away,
+    so also will the coming of the Son of Man be.''} 
+\I We must be those who are prepared for His return 
+    (Matt 25, parable of the virgins).
+\I And we can start on this by reading, understanding, and obeying
+    the Revelation of Jesus Christ.
+
+        
 \section{The Authority of the Revelation of Jesus Christ}
 \subsection{The word of God}
 \subsection{The testimony of Jesus Christ}
