Final submission to Opec, with response to reviewers.

--- a/presentations/ob1_wg_paper/paper.tex
+++ b/presentations/ob1_wg_paper/paper.tex
@@ -312,9 +312,7 @@ In the appendix, we further demonstrate the generality of our method
     \centering
     \includegraphics[width=0.8\textwidth]{2} 
     \caption{Coupler that converts the fundamental waveguide mode to the
-            second-order waveguide mode
-            (a movie of the design progress is included as a
-            supplementary material).
+            second-order waveguide mode.
         This problem is quite difficult since the two modes are of 
             opposite symmetry.
         For example, adiabatic approaches cannot be applied to this case.
