--- a/presentations/ob1_wg_paper/response.tex
+++ b/presentations/ob1_wg_paper/response.tex
@@ -12,8 +12,9 @@ A short response to the reviewer's remarks follows.
     possible to use this method for 2 tilt beams as in the case occurring in the grating
     coupler. first reference of the paper is not really appropriate.}
 
-    The purpose of the first paper is appropriate because it is an example of
-    solving the mode conversion for nanophotonics
+    The purpose of the first reference is an example of
+        solving the mode conversion for nanophotonics, 
+        and we believe it is appropriate.
 
 \item Reviewer comments: 
     \Q{The method uses a 2.5 D approximation that it is not able to calculate accurately the
