--- a/presentations/lightlabsFDS_mar-2012/pres.tex
+++ b/presentations/lightlabsFDS_mar-2012/pres.tex
@@ -1,7 +1,7 @@
 \documentclass[landscape]{foils}
 \usepackage{graphicx}
 \usepackage{amsmath}
-% \usepackage[pdf]{pstricks}
+\usepackage[pdf]{pstricks}
 \input defs.tex
 \raggedright
 \special{! TeXDict begin /landplus90{true}store end }
@@ -58,23 +58,27 @@ Innovate on three fronts to make this a reality:
    
 \oursection{Example}
 
-% \psset{unit=1.5cm}
-% \psset{gridcolor=green, subgridcolor=yellow}
-% \begin{center}
-% \begin{pspicture}(8,5)
-%     \let\psgrid\relax
-% 
-%     \psframe*[linecolor=gray, fillcolor=gray, fillstyle=solid] (1,2.2)(4,2.8)
-%     \psframe*[linecolor=gray, fillcolor=gray, fillstyle=solid] (3,1)(5,4)
-%     \psframe*[linecolor=gray, fillcolor=gray, fillstyle=solid] (4,1.4)(7,2)
-%     \psframe*[linecolor=gray, fillcolor=gray, fillstyle=solid] (4,3.0)(7,3.6)
-%     \rput[B](4,4.1){Device}
-%     \psline[linestyle=dashed](1.6,0.6)(1.6,4.0)
-%     \rput[B](1.6,4.1){in}
-%     \psline[linestyle=dashed](6.4,0.6)(6.4,4.0)
-%     \rput[B](6.4,4.1){out}
-% \end{pspicture}
-% \end{center}
+\psset{unit=1.5cm}
+\psset{gridcolor=green, subgridcolor=yellow}
+\begin{center}
+\begin{pspicture}(8,5)
+    \let\psgrid\relax
+
+    \psframe*[linecolor=lightgray,fillcolor=lightgray,fillstyle=solid]
+        (1,2.2)(4,2.8)
+    \psframe*[linecolor=lightgray,fillcolor=lightgray,fillstyle=solid]
+        (3,1)(5,4)
+    \psframe*[linecolor=lightgray,fillcolor=lightgray,fillstyle=solid]
+        (4,1.4)(7,2)
+    \psframe*[linecolor=lightgray,fillcolor=lightgray,fillstyle=solid]
+        (4,3.0)(7,3.6)
+    \rput[B](4,4.2){\textrm{Device}}
+    \psline[linestyle=dashed](1.6,0.6)(1.6,4.0)
+    \rput[B](1.6,4.2){\textrm{in}}
+    \psline[linestyle=dashed](6.4,0.6)(6.4,4.0)
+    \rput[B](6.4,4.2){\textrm{out}}
+\end{pspicture}
+\end{center}
 Time-domain issues include
 \BIT
 \I  Input: clean excitation at input requires an auxiliary simulation
@@ -85,19 +89,32 @@ Time-domain issues include
 \newpage
 
 % \begin{center}
-% \begin{pspicture}(8,5)
-%     \psgrid
-% 
-%     \psframe*[linecolor=gray, fillcolor=gray, fillstyle=solid] (1,2.2)(4,2.8)
-%     \psframe*[linecolor=gray, fillcolor=gray, fillstyle=solid] (3,1)(5,4)
-%     \psframe*[linecolor=gray, fillcolor=gray, fillstyle=solid] (4,1.4)(7,2)
-%     \psframe*[linecolor=gray, fillcolor=gray, fillstyle=solid] (4,3.0)(7,3.6)
-%     \rput[B](4,4.1){Device}
-%     \psline[linestyle=dashed](1.6,0.6)(1.6,4.0)
-%     \rput[B](1.6,4.1){in}
-%     \psline[linestyle=dashed](6.4,0.6)(6.4,4.0)
-%     \rput[B](6.4,4.1){out}
-% \end{pspicture}
+\begin{pspicture}(6,5)(-6,0)
+    \psgrid
+
+    \psframe[fillstyle=none](-1,2)(1,3)
+    \rput(0,2.5){\textrm{TDS}}
+
+    \psline(-2.4,2.5)(-1,2.5)
+    \rput[B](-1.6,2.7){$x(t)$}
+
+    \pspolygon[fillcolor=lightgray,fillstyle=solid]
+        (-2.4,4)(-2.4,1)(-3.2,0.5)(-3.2,4.5)
+    \psline(-4,4)(-3.2,4) \rput(-4.8,4){$X(\omega_1)$}
+    \psline(-4,3)(-3.2,3) \rput(-4.8,3){$X(\omega_2)$}
+    \psline(-4,2)(-3.2,2) \rput(-4.8,2){$\vdots$}
+    \psline(-4,1)(-3.2,1) \rput(-4.8,1){$X(\omega_n)$}
+
+    \psline(2.4,2.5)(1,2.5)
+    \rput[B](1.6,2.7){$y(t)$}
+
+    \pspolygon[fillcolor=lightgray,fillstyle=solid]
+        (2.4,4)(2.4,1)(3.2,0.5)(3.2,4.5)
+    \psline(4,4)(3.2,4) \rput(4.8,4){$Y(\omega_1)$}
+    \psline(4,3)(3.2,3) \rput(4.8,3){$Y(\omega_2)$}
+    \psline(4,2)(3.2,2) \rput(4.8,2){$\vdots$}
+    \psline(4,1)(3.2,1) \rput(4.8,1){$Y(\omega_n)$}
+\end{pspicture}
 % \end{center}
 \BIT
 \I  Fundamental problem: trying to use a time-domain solver as a 
@@ -106,6 +123,34 @@ Time-domain issues include
 \EIT
 \newpage
 
+\begin{center}
+\begin{pspicture}(6,4)(-6,-2)
+    \psgrid
+
+    \psframe[fillstyle=none](-1,2)(1,3)
+    \rput(0,2.5){\textrm{FDS}}
+    \psline(-2.4,2.5)(-1,2.5)
+    \rput(-3.2,2.5){$X(\omega_1)$}
+    \psline(2.4,2.5)(1,2.5)
+    \rput(3.2,2.5){$Y(\omega_1)$}
+
+    \psframe[fillstyle=none](-1,0.6)(1,1.6)
+    \rput(0,1.1){\textrm{FDS}}
+    \psline(-2.4,1.1)(-1,1.1)
+    \rput(-3.2,1.1){$X(\omega_2)$}
+    \psline(2.4,1.1)(1,1.1)
+    \rput(3.2,1.1){$Y(\omega_2)$}
+
+    \rput(0,0.2){$\vdots$}
+
+    \psframe[fillstyle=none](-1,-0.4)(1,-1.4)
+    \rput(0,-0.9){\textrm{FDS}}
+    \psline(-2.4,-0.9)(-1,-0.9)
+    \rput(-3.2,-0.9){$X(\omega_n)$}
+    \psline(2.4,-0.9)(1,-0.9)
+    \rput(3.2,-0.9){$Y(\omega_n)$}
+\end{pspicture}
+\end{center}
 \BIT
 \I  Allow direct access to frequency-domain data.
 \I  Take care of input and output fields outside of the simulation.
@@ -114,7 +159,9 @@ Time-domain issues include
 \EIT
 \newpage
 
-Picture from paper here.
+\begin{center}
+% \includegraphics[width=\textwidth]{pml_cutout}
+\end{center}
 \BIT
 \I  Frequency-domain solver made possible by correct choice of PML and 
         linear algebra algorithm.
@@ -144,7 +191,19 @@ Picture from paper here.
 \EIT
 
 \oursection{Hardware}
-Hub and spokes picture here.
+\begin{center}
+\begin{pspicture}(6,3)(-6,-3)
+    \psgrid
+    \rput(0,0){\parbox{5cm}{\begin{center}\textrm{lightlabsFDS\\server}
+                            \end{center}}}
+    \psline{<->}(-1.2,0.8)(-2.8,1.4) \rput(-3.5,1.5){\textrm{user1}}
+    \psline{<->}(-3.2,0)(-1.6,0) \rput(-4,0){\textrm{user2}}
+    \psline{<->}(-1.2,-0.8)(-2.8,-1.4) \rput(-3.5,-1.5){\textrm{user3}}
+    \psline{<->}(1.2,0.8)(2.8,1.4) \rput(3.5,1.5){\textrm{user4}}
+    \psline{<->}(3.2,0)(1.6,0) \rput(4,0){$\vdots$}
+    \psline{<->}(1.2,-0.8)(2.8,-1.4) \rput(3.5,-1.5){\textrm{userN}}
+\end{pspicture}
+\end{center}
 \BIT
 \I  Centralized, shared, custom-tuned server able to deliver the performance
         of a large cluster
